<?xml version="1.0" encoding="UTF-8"?>
<project
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <!-- POM file generated with GWT webAppCreator -->
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.zenika.zbooks</groupId>
  <artifactId>zBooksGwt</artifactId>
  <packaging>war</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>GWT Maven Archetype</name>

  <properties>
  	<java-version>1.6</java-version>
  	<gwtrpc-spring.version>1.02</gwtrpc-spring.version>
  	<hibernate.version>4.2.0.Final</hibernate.version>
  	<spring.version>3.2.5.RELEASE</spring.version>
  	<h2.version>1.3.174</h2.version>
    <gwt.version>2.5.1</gwt.version>
    <!-- GWT needs at least java 1.5 -->
    <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
  
  	<!-- Hibernate -->
  	<dependency>
          <groupId>org.hibernate</groupId>
          <artifactId>hibernate-core</artifactId>
          <version>${hibernate.version}</version>
    </dependency>
    <dependency>
          <groupId>org.hibernate</groupId>
          <artifactId>hibernate-entitymanager</artifactId>
          <version>${hibernate.version}</version>
    </dependency>
    <!-- Used to raise error in case of an annotation in the wrong place - on a setter for example -->
    <dependency>
          <groupId>org.hibernate</groupId>
          <artifactId>hibernate-validator</artifactId>
          <version>${hibernate.version}</version>
    </dependency>
    
    <!-- H2DB -->
    <dependency>
	      <groupId>com.h2database</groupId>
	      <artifactId>h2</artifactId>
	      <version>${h2.version}</version>
	</dependency>
    
    <!-- GWT -->
    <dependency>
	      <groupId>com.google.gwt</groupId>
	      <artifactId>gwt-servlet</artifactId>
	      <version>${gwt.version}</version>
	      <scope>runtime</scope>
    </dependency>
    <dependency>
	      <groupId>com.google.gwt</groupId>
	      <artifactId>gwt-user</artifactId>
	      <version>${gwt.version}</version>
	      <scope>provided</scope>
    </dependency>
    
    <!-- GWTRPC-Spring -->
    <dependency>
        <groupId>org.gwtrpcspring</groupId>
        <artifactId>gwtrpcspring</artifactId>
        <version>${gwtrpc-spring.version}</version>
        <scope>compile</scope>
    </dependency>
    
    <!-- Spring -->
    <dependency>
		  <groupId>org.springframework</groupId>
		  <artifactId>spring-test</artifactId>
		  <version>${spring.version}</version>
	</dependency>
	<dependency>
		  <groupId>org.springframework</groupId>
		  <artifactId>spring-web</artifactId>
		  <version>${spring.version}</version>
		  <scope>runtime</scope>
	</dependency>
    <dependency>
		  <groupId>org.springframework</groupId>
		  <artifactId>spring-tx</artifactId>
		  <version>${spring.version}</version>
		  <scope>compile</scope>
	</dependency>
	<dependency>
          <groupId>org.springframework</groupId>
          <artifactId>spring-core</artifactId>
          <version>${spring.version}</version>
    </dependency>
    <dependency>
          <groupId>org.springframework</groupId>
          <artifactId>spring-beans</artifactId>
          <version>${spring.version}</version>
    </dependency>
	<dependency>
		  <groupId>org.springframework</groupId>
		  <artifactId>spring-context</artifactId>
		  <version>${spring.version}</version>
		  <scope>compile</scope>
	</dependency>
	<dependency>
		  <groupId>org.springframework</groupId>
		  <artifactId>spring-jdbc</artifactId>
		  <version>${spring.version}</version>
		  <scope>compile</scope>
	</dependency>
	<dependency>
		  <groupId>org.springframework</groupId>
		  <artifactId>spring-orm</artifactId>
		  <version>${spring.version}</version>
		  <scope>compile</scope>
	</dependency>
	     
    
    <!-- Tests -->
    <dependency>
	      <groupId>junit</groupId>
	      <artifactId>junit</artifactId>
	      <version>4.7</version>
	      <scope>test</scope>
    </dependency>
    <dependency>
		  <groupId>org.assertj</groupId>
		  <artifactId>assertj-core</artifactId>
		  <version>1.5.0</version>
	</dependency>
	<dependency>
		  <groupId>org.mockito</groupId>
		  <artifactId>mockito-all</artifactId>
		  <version>1.9.5</version>
	</dependency>    
            
    
    <!-- Logger -->
    <dependency>
		  <groupId>log4j</groupId>
		  <artifactId>log4j</artifactId>
		  <version>1.2.16</version>
	</dependency>
            
    
    <!-- Required by JPA -->
    <dependency>
	      <groupId>javax.validation</groupId>
	      <artifactId>validation-api</artifactId>
	      <version>1.0.0.GA</version>
	      <scope>test</scope>
    </dependency>
    <dependency>
	      <groupId>javax.validation</groupId>
	      <artifactId>validation-api</artifactId>
	      <version>1.0.0.GA</version>
	      <classifier>sources</classifier>
	      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <!-- Generate compiled stuff in the folder used for developing mode -->
    <outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>

    <plugins>

      <!-- GWT Maven Plugin -->
      <plugin>
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>gwt-maven-plugin</artifactId>
              <version>${gwt.version}</version>
              <executions>
                      <execution>
                              <goals>
                                      <goal>compile</goal>
                              </goals>
                      </execution>
              </executions>
              <configuration>
					  <!-- The module is the .gwt.xml file which MUST be located in the src/main/java -->
                      <modules>
                              <module>com.zenika.zbooks.gwt.ZBooksGwt</module>
                      </modules>
                      <runTarget>zBooksGwt.html</runTarget>
                      <hostedWebapp>${webappDirectory}</hostedWebapp>
<!--                       <extraJvmArgs>-XX:MaxPermSize=512m -Xmx1024m</extraJvmArgs> -->
              </configuration>
      </plugin>

      <!-- Copy static web files before executing gwt:run -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>2.1.1</version>
        <executions>
          <execution>
            <phase>compile</phase>
            <goals>
              <goal>exploded</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <webappDirectory>${webappDirectory}</webappDirectory>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>
	  <plugin>
		<artifactId>maven-eclipse-plugin</artifactId>
		<version>2.9</version>
		<configuration>
			<downloadSources>true</downloadSources>
			<downloadJavadocs>true</downloadJavadocs>
		</configuration>
	  </plugin>
    </plugins>
  </build>

</project>
